 * последний выбранный логин и последняя игра теперь автоматически выбираются при повторном запуске программы;
 * исправлена ошибка в Редакторе конфигов, приводившая к неправильному разбору файла, в котором разделителями были только табуляции;
 * добавлено больше русскоязычных описаний клиентских и серверных переменных для использования в Редакторе конфигов;
 * 

Версия 4.0 Final r401 (31 августа 2011):
 * добавлено сообщение о запуске проверки обновлений в строку статуса;
 * добавлена полная поддержка игр Half-Life: Source и Half-Life Deathmatch: Source;
 * исправлена ошибка на странице Резервные копии, приводившая к невозможности показать выбранный файл резервной копии в Проводнике;
 * добавлена возможность выбора используемой онлайновой справочной системы: с официального сайта или из Wiki;
 * модуль очистки старых бинарников теперь удаляет и основной лаунчер;
 * переименованы некоторые пункты меню;
 * пункт меню "Интернет-магазин" удалён за ненадобностью и нулевой отдачей;
 * добавлено больше русскоязычных описаний переменных для использования в Редакторе конфигов;
 * исправлена ошибка, приводившая к невозможности получения пути к Steam на некоторых версиях 64-битных ОС;
 * произведены незначительные оптимизации;
 * улучшена стабильность работы;
 * удалены функции, ранее объявленные как устаревшие (deprecated);
 * исправлены опечатки в локализациях.

Версия 3.0 Final r355 (04 июля 2011):
 * в модуле очистки нажатие Enter теперь запускает очистку, а Esc - отменяет;
 * имя XML-файла со списком игр больше не может быть изменено или переопределено во время работы приложения;
 * обновлён модуль Hosts Editor до версии 0.2;
 * удалена ненужная чёрная рамка в Редакторе конфигов и на странице Резервные копии;
 * по окончании очистки блобов или реестра Steam будет запущен автоматически в режиме восстановления;
 * добавлена опция включения небезопасных операций очистки для NCF-игр (по умолчанию отключена);