@@ -4,95 +4,133 @@
     <IsGCF>1</IsGCF>
     <DirName>team fortress 2</DirName>
     <SmallName>tf</SmallName>
+	<SID>440</SID>
+	<IsMP>1</IsMP>
   </Game>
   <Game Name="Counter-Strike: Source">
     <IsGCF>1</IsGCF>
     <DirName>counter-strike source</DirName>
     <SmallName>cstrike</SmallName>
+	<SID>240</SID>
+	<IsMP>1</IsMP>
   </Game>
   <Game Name="Day of Defeat: Source">
     <IsGCF>1</IsGCF>
     <DirName>day of defeat source</DirName>
     <SmallName>dod</SmallName>
+	<SID>300</SID>
+	<IsMP>1</IsMP>
   </Game>
   <Game Name="Half-Life 2: Deathmatch">
     <IsGCF>1</IsGCF>
     <DirName>half-life 2 deathmatch</DirName>
     <SmallName>hl2mp</SmallName>
+	<SID>320</SID>
+	<IsMP>1</IsMP>
   </Game>
   <Game Name="Half-Life 2">
     <IsGCF>1</IsGCF>
     <DirName>half-life 2</DirName>
     <SmallName>hl2</SmallName>
+	<SID>220</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Half-Life 2: Episode One">
     <IsGCF>1</IsGCF>
     <DirName>half-life 2 episode one</DirName>
     <SmallName>episodic</SmallName>
+	<SID>380</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Half-Life 2: Episode Two">
     <IsGCF>1</IsGCF>
     <DirName>half-life 2 episode two</DirName>
     <SmallName>ep2</SmallName>
+	<SID>420</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Portal">
     <IsGCF>1</IsGCF>
     <DirName>portal</DirName>
     <SmallName>portal</SmallName>
+	<SID>400</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Garry's Mod">
     <IsGCF>1</IsGCF>
     <DirName>garrysmod</DirName>
     <SmallName>garrysmod</SmallName>
+	<SID>4000</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Age of Chivalry">
     <IsGCF>1</IsGCF>
     <DirName>age of chivalry</DirName>
     <SmallName>ageofchivalry</SmallName>
+	<SID>17510</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="D.I.P.R.I.P.: Warm Up">
     <IsGCF>1</IsGCF>
     <DirName>diprip warm up</DirName>
     <SmallName>diprip</SmallName>
+	<SID>17530</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Dystopia">
     <IsGCF>1</IsGCF>
     <DirName>dystopia</DirName>
     <SmallName>Dystopia</SmallName>
+	<SID>17580</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Insurgency">
     <IsGCF>1</IsGCF>
     <DirName>insurgency</DirName>
     <SmallName>insurgency</SmallName>
+	<SID>17700</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Pirates, Vikings, and Knights II">
     <IsGCF>1</IsGCF>
     <DirName>pirates, vikings, and knights ii</DirName>
     <SmallName>pvkii</SmallName>
+	<SID>17570</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Smashball">
     <IsGCF>1</IsGCF>
     <DirName>smashball</DirName>
     <SmallName>Smashball</SmallName>
+	<SID>17730</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Synergy">
     <IsGCF>1</IsGCF>
     <DirName>synergy</DirName>
     <SmallName>synergy</SmallName>
+	<SID>17520</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Zombie Panic! Source">
     <IsGCF>1</IsGCF>
     <DirName>zombie panic! source</DirName>
     <SmallName>zps</SmallName>
+	<SID>17500</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Half-Life: Source">
     <IsGCF>1</IsGCF>
     <DirName>half-life source</DirName>
     <SmallName>hl1</SmallName>
+	<SID>280</SID>
+	<IsMP>0</IsMP>
   </Game>
   <Game Name="Half-Life Deathmatch: Source">
     <IsGCF>1</IsGCF>
     <DirName>half-life deathmatch source</DirName>
     <SmallName>hl1mp</SmallName>
+	<SID>360</SID>
+	<IsMP>0</IsMP>
   </Game>
 </Games>
