@@ -4,6 +4,8 @@
  * последний выбранный логин и последняя игра теперь автоматически выбираются при повторном запуске программы;
  * исправлена ошибка в Редакторе конфигов, приводившая к неправильному разбору файла, в котором разделителями были только табуляции;
  * добавлено больше русскоязычных описаний клиентских и серверных переменных для использования в Редакторе конфигов;
+ * в главном окне программы теперь отображается статус Steam Cloud для этой игры;
+ * двойной клик по статусу Steam Cloud переключает его в противоположное состояние;
  * 
 
 Версия 4.0 Final r401 (31 августа 2011):
